--- a/portfolio.html
+++ b/portfolio.html
@@ -46,104 +46,122 @@
  <!-- GALLERY -->
     <section class="gallery-section">
         <div class="container">
-            <ul>
-                <li class="list">
+            <ul class="portfolio-btn list">
+                <li class="list-btn">
                     <button class="gallery-btn" type="button">Все</button>
                 </li>
-                <li class="list">
+                <li class="list-btn">
                     <button class="gallery-btn" type="button">Веб-сайты</button>
                 </li>
-                <li class="list">
+                <li class="list-btn">
                     <button class="gallery-btn" type="button">Приложения</button>
                 </li>
-                <li class="list">
+                <li class="list-btn">
                     <button class="gallery-btn" type="button">Дизайн</button>
                 </li>
-                <li class="list">
+                <li class="list-btn">
                     <button class="gallery-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
-            <ul>
-                <li class="list">
+            <ul class="list gallery-work">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/websitetehno.jpg"
                         alt="Веб-сайт"
                         width="370"
                         height="294">
+                    <div class="gallery-foto-project">
                     <h3 class="project">Технокряк</h3>
-                    <p class="form-project">Веб-сайт</p>    
+                    <p class="form-project">Веб-сайт</p>                            
+                    </div> 
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/designgoldrnstar.jpg"
                         alt="Дизайн"
                         width="370"
                         height="294">
-                    <h3 class="project">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                    <p class="form-project">Дизайн</p>
+                    <div class="gallery-foto-project">
+                        <h3 class="project">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="form-project">Дизайн</p>
+                    </div>  
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/applicsea.jpg"
                         alt="Приложение"
                         width="370"
                         height="294">
-                    <h3 class="project">Ресторан <span lang="en">Seafood</span></h3>
-                    <p class="form-project">Приложение</p>             
+                    <div class="gallery-foto-project">
+                        <h3 class="project">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="form-project">Приложение</p> 
+                    </div>         
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/marketingprime.jpg"
                         alt="Маркетинг"
                         width="370"
                         height="294">
-                    <h3 class="project">Проект <span lang="en">Prime</span></h3>
-                    <p class="form-project">Маркетинг</p> 
+                    <div class="gallery-foto-project">
+                        <h3 class="project">Проект <span lang="en">Prime</span></h3>
+                        <p class="form-project">Маркетинг</p> 
+                    </div>
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/applicboxes.jpg"
                         alt="Приложение"
                         width="370"
                         height="294">
-                    <h3 class="project">Проект <span lang="en">Boxes</span></h3>
-                    <p class="form-project">Приложение</p> 
+                    <div class="gallery-foto-project">
+                        <h3 class="project">Проект <span lang="en">Boxes</span></h3>
+                        <p class="form-project">Приложение</p> 
+                    </div>
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/websiteborders.jpg"
                         alt="Веб-сайт"
                         width="370"
                         height="294">
-                    <h3 class="project" lang="en">Inspiration has no Borders</h3>
-                    <p class="form-project">Веб-сайт</p> 
+                    <div class="gallery-foto-project">
+                        <h3 class="project" lang="en">Inspiration has no Borders</h3>
+                        <p class="form-project">Веб-сайт</p>                         
+                    </div>
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/designedition.jpg"
                         alt="Дизайн"
                         width="370"
                         height="294">
-                    <h3 class="project">Издание <span lang="en">Limited Edition</span></h3>
-                    <p class="form-project">Дизайн</p> 
+                    <div class="gallery-foto-project">
+                        <h3 class="project">Издание <span lang="en">Limited Edition</span></h3>
+                        <p class="form-project">Дизайн</p> 
+                    </div>
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/mahketinglab.jpg"
                         alt="Маркетинг"
                         width="370"
                         height="294">
-                    <h3 class="project">Проект <span lang="en">LAB</span></h3>
-                    <p class="form-project">Маркетинг</p> 
+                    <div class="gallery-foto-project">
+                        <h3 class="project">Проект <span lang="en">LAB</span></h3>
+                        <p class="form-project">Маркетинг</p> 
+                    </div>
                 </li>
-                <li class="list">
+                <li class="gallery-foto">
                     <img
                         src="./imeges/gallery/applicbusiness.jpg"
                         alt="приложение"
                         width="370"
                         height="294">
+                    <div class="gallery-foto-project">
                         <h3 class="project" lang="en">Growing Business</h3>
                         <p class="form-project">Приложение</p> 
+                    </div>
                 </li>
             </ul>
         </div>
@@ -151,11 +169,11 @@
   
 </main>
 <!--FOOTER-->
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <a class="link logo" href="WebStudio" lang="en">Web<span class="logolight">Studio</span></a>
+            <a class="link logo logo-footer" href="WebStudio" lang="en">Web<span class="logolight">Studio</span></a>
             <address>
-                <ul class="list">
+                <ul class="list adress-footer">
                     <li>
                         <a class="link-footer adress"
                             href="https://goo.gl/maps/aPMMfaf2fwCcFUGt7"
