--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <a class="link logo" href="WebStudio" lang="en">Web<span class="logolight">Studio</span></a>
             <address>
                 <ul class="list adress-footer">
-                    <li>
+                    <li class="adress-footer-map">
                         <a class="link-footer adress"
                         href="https://goo.gl/maps/aPMMfaf2fwCcFUGt7"
                         target="_blank" 
@@ -171,10 +171,10 @@
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                     </li>
-                    <li>
+                    <li class="email-footer">
                         <a class="link connection" href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="tel-footer">
                         <a class="link connection" href="tel:+380991111111">+38 099 111 11 11</a>
                     </li>
                 </ul>
