--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
             <a class="link logo logo-footer" href="WebStudio" lang="en">Web<span class="logolight">Studio</span></a>
             <address>
                 <ul class="list adress-footer">
-                    <li>
+                    <li class="adress-footer-map">
                         <a class="link-footer adress"
                             href="https://goo.gl/maps/aPMMfaf2fwCcFUGt7"
                             target="_blank" 
@@ -182,10 +182,10 @@
                         г. Киев, пр-т Леси Украинки, 26
                         </a>
                     </li>
-                    <li>
+                    <li class="email-footer">
                         <a class="link-footer connection" href="mailto:info@example.com">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="tel-footer">
                         <a class="link-footer connection" href="tel:+380991111111">+38 099 111 11 11</a>
                     </li>
                 </ul>
